kubernetes/apps/tools/snappass/app/httproute.yaml
---
# yaml-language-server: $schema=https://github.com/datreeio/CRDs-catalog/raw/refs/heads/main/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: snappass
  namespace: tools
spec:
  hostnames: ["snappass.${SECRET_DOMAIN}"]
  parentRefs:
    - name: external
      namespace: kube-system
      sectionName: https
  rules:
    - backendRefs:
        - name: snappass
          namespace: tools
          port: 80
